openapi fix
