# api-docs.yaml
@@ -7,29 +7,29 @@ servers:
   - url: http://localhost:8080
     description: ""
 tags:
-  - name: Board API
+  - name: Board Controller
     description: Управление спортивными бордами
-  - name: Rental API
+  - name: Rental Controller
     description: Управление арендой бордов
 paths:
   /api/v1/rentals:
     get:
       tags:
-        - Rental API
+        - Rental Controller
       summary: Получить активные аренды
       operationId: getActiveRentals
       responses:
         "200":
           description: OK
           content:
-            '*/*':
+            application/json:
               schema:
                 type: array
                 items:
                   $ref: "#/components/schemas/RentalResponseDTO"
     post:
       tags:
-        - Rental API
+        - Rental Controller
       summary: Создать новую аренду
       operationId: createRental
       requestBody:
@@ -40,7 +40,11 @@ paths:
         required: true
       responses:
         "201":
-          description: Created
+          description: Аренда успешно создана
+          content:
+            application/json: {}
+        "400":
+          description: Некорректный запрос
           content:
             '*/*':
               schema:
@@ -48,7 +52,7 @@ paths:
   /api/v1/rentals/{rentalId}/return:
     post:
       tags:
-        - Rental API
+        - Rental Controller
       summary: Вернуть борд
       operationId: returnBoard
       parameters:
@@ -64,14 +68,14 @@ paths:
   /api/v1/boards/available:
     get:
       tags:
-        - Board API
+        - Board Controller
       summary: Получить все доступные борды
       operationId: getAvailableBoards
       responses:
         "200":
           description: OK
           content:
-            '*/*':
+            application/json:
               schema:
                 type: array
                 items:
@@ -79,7 +83,7 @@ paths:
   /api/v1/boards/available/{type}:
     get:
       tags:
-        - Board API
+        - Board Controller
       summary: Получить доступные борды по типу
       operationId: getAvailableBoardsByType
       parameters:
@@ -97,7 +101,7 @@ paths:
         "200":
           description: OK
           content:
-            '*/*':
+            application/json:
               schema:
                 type: array
                 items:
