# src/main/java/com/example/boardrental/controllers/RentalController.java
@@ -4,6 +4,9 @@ import com.example.boardrental.models.RentalRequestDTO;
 import com.example.boardrental.models.RentalResponseDTO;
 import com.example.boardrental.services.RentalService;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -13,7 +16,7 @@ import java.util.List;
 
 @RestController
 @RequestMapping("/api/v1/rentals")
-@Tag(name = "Rental API", description = "Управление арендой бордов")
+@Tag(name = "Rental Controller", description = "Управление арендой бордов")
 @RequiredArgsConstructor
 public class RentalController {
     private final RentalService rentalService;
@@ -21,12 +24,17 @@ public class RentalController {
     @Operation(summary = "Создать новую аренду")
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "201", description = "Аренда успешно создана",
+            content = @Content(mediaType = "application/json")),
+            @ApiResponse(responseCode = "400", description = "Некорректный запрос")
+    })
     public RentalResponseDTO createRental(@Valid @RequestBody RentalRequestDTO requestDTO) {
         return rentalService.createRental(requestDTO);
     }
 
     @Operation(summary = "Получить активные аренды")
-    @GetMapping
+    @GetMapping(produces = "application/json")
     public List<RentalResponseDTO> getActiveRentals() {
         return rentalService.getActiveRentals();
     }
